padding issue on right aligned images

--- a/less/style.less
+++ b/less/style.less
@@ -113,7 +113,7 @@
      margin: 5px 0 8px 24px;
 
      @media only screen and (max-width: 320px) {
-    margin-right: 0;
+    margin-left: 0;
       }
 
 }
